snapshots/serde/test_suite/tests/compiletest.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 9
kind: unit
spaces:
  - name: ui
    start_line: 6
    end_line: 9
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 8
        total_operators: 12
        unique_operands: 7
        total_operands: 8
        length: 20
        estimated_program_length: 43.651
        purity_ratio: 2.183
        vocabulary: 15
        volume: 78.138
        difficulty: 4.571
        level: 0.219
        effort: 357.201
        time: 19.845
        bugs: 0.017
      loc:
        sloc: 4
        ploc: 4
        lloc: 2
        cloc: 0
        blank: 0
        sloc_average: 4
        ploc_average: 4
        lloc_average: 2
        cloc_average: 0
        blank_average: 0
        sloc_min: 4
        sloc_max: 4
        cloc_min: 0
        cloc_max: 0
        ploc_min: 4
        ploc_max: 4
        lloc_min: 2
        lloc_max: 2
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 26
        average: 26
        min: 26
        max: 26
      mi:
        original: 125.648
        sei: 105.673
        visual_studio: 73.478
      abc:
        assignments: 1
        branches: 2
        conditions: 0
        magnitude: 2.236
        value: 2.236
        assignments_average: 1
        branches_average: 2
        conditions_average: 0
        assignments_min: 1
        assignments_max: 1
        branches_min: 2
        branches_max: 2
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 2
    value: 1
    average: 2
    min: 1
    max: 1
    modified:
      sum: 2
      value: 1
      average: 2
      min: 1
      max: 1
  halstead:
    unique_operators: 10
    total_operators: 27
    unique_operands: 19
    total_operands: 23
    length: 50
    estimated_program_length: 113.93
    purity_ratio: 2.279
    vocabulary: 29
    volume: 242.899
    difficulty: 6.053
    level: 0.165
    effort: 1470.178
    time: 81.677
    bugs: 0.043
  loc:
    sloc: 9
    ploc: 9
    lloc: 2
    cloc: 0
    blank: 0
    sloc_average: 4.5
    ploc_average: 4.5
    lloc_average: 1
    cloc_average: 0
    blank_average: 0
    sloc_min: 4
    sloc_max: 9
    cloc_min: 0
    cloc_max: 0
    ploc_min: 4
    ploc_max: 9
    lloc_min: 2
    lloc_max: 2
    blank_min: 0
    blank_max: 0
  nom:
    functions: 1
    closures: 0
    functions_average: 0.5
    closures_average: 0
    total: 1
    average: 0.5
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 73
    average: 36.5
    min: 26
    max: 47
  mi:
    original: 106.383
    sei: 77.981
    visual_studio: 62.212
  abc:
    assignments: 1
    branches: 2
    conditions: 0
    magnitude: 2.236
    value: 0
    assignments_average: 0.5
    branches_average: 1
    conditions_average: 0
    assignments_min: 0
    assignments_max: 1
    branches_min: 0
    branches_max: 2
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
