snapshots/serde/test_suite/tests/test_identifier.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 88
kind: unit
spaces:
  - name: test_variant_identifier
    start_line: 9
    end_line: 23
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 9
        total_operators: 67
        unique_operands: 21
        total_operands: 46
        length: 113
        estimated_program_length: 120.768
        purity_ratio: 1.069
        vocabulary: 30
        volume: 554.479
        difficulty: 9.857
        level: 0.101
        effort: 5465.575
        time: 303.643
        bugs: 0.103
      loc:
        sloc: 15
        ploc: 14
        lloc: 6
        cloc: 0
        blank: 1
        sloc_average: 15
        ploc_average: 14
        lloc_average: 6
        cloc_average: 0
        blank_average: 1
        sloc_min: 15
        sloc_max: 15
        cloc_min: 0
        cloc_max: 0
        ploc_min: 14
        ploc_max: 14
        lloc_min: 6
        lloc_max: 6
        blank_min: 1
        blank_max: 1
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 144
        average: 144
        min: 144
        max: 144
      mi:
        original: 94.046
        sei: 60.08
        visual_studio: 54.998
      abc:
        assignments: 0
        branches: 12
        conditions: 0
        magnitude: 12
        value: 12
        assignments_average: 0
        branches_average: 12
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 12
        branches_max: 12
        conditions_min: 0
        conditions_max: 0
  - name: test_field_identifier
    start_line: 26
    end_line: 40
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 10
        total_operators: 69
        unique_operands: 23
        total_operands: 48
        length: 117
        estimated_program_length: 137.261
        purity_ratio: 1.173
        vocabulary: 33
        volume: 590.194
        difficulty: 10.435
        level: 0.096
        effort: 6158.547
        time: 342.142
        bugs: 0.112
      loc:
        sloc: 15
        ploc: 14
        lloc: 6
        cloc: 0
        blank: 1
        sloc_average: 15
        ploc_average: 14
        lloc_average: 6
        cloc_average: 0
        blank_average: 1
        sloc_min: 15
        sloc_max: 15
        cloc_min: 0
        cloc_max: 0
        ploc_min: 14
        ploc_max: 14
        lloc_min: 6
        lloc_max: 6
        blank_min: 1
        blank_max: 1
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 150
        average: 150
        min: 150
        max: 150
      mi:
        original: 93.721
        sei: 59.612
        visual_studio: 54.808
      abc:
        assignments: 0
        branches: 12
        conditions: 0
        magnitude: 12
        value: 12
        assignments_average: 0
        branches_average: 12
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 12
        branches_max: 12
        conditions_min: 0
        conditions_max: 0
  - name: test_unit_fallthrough
    start_line: 43
    end_line: 58
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 10
        total_operators: 63
        unique_operands: 23
        total_operands: 45
        length: 108
        estimated_program_length: 137.261
        purity_ratio: 1.271
        vocabulary: 33
        volume: 544.795
        difficulty: 9.783
        level: 0.102
        effort: 5329.512
        time: 296.084
        bugs: 0.102
      loc:
        sloc: 16
        ploc: 15
        lloc: 5
        cloc: 0
        blank: 1
        sloc_average: 16
        ploc_average: 15
        lloc_average: 5
        cloc_average: 0
        blank_average: 1
        sloc_min: 16
        sloc_max: 16
        cloc_min: 0
        cloc_max: 0
        ploc_min: 15
        ploc_max: 15
        lloc_min: 5
        lloc_max: 5
        blank_min: 1
        blank_max: 1
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 139
        average: 139
        min: 139
        max: 139
      mi:
        original: 93.092
        sei: 58.704
        visual_studio: 54.44
      abc:
        assignments: 0
        branches: 10
        conditions: 0
        magnitude: 10
        value: 10
        assignments_average: 0
        branches_average: 10
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 10
        branches_max: 10
        conditions_min: 0
        conditions_max: 0
  - name: test_newtype_fallthrough
    start_line: 61
    end_line: 71
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 11
        total_operators: 29
        unique_operands: 19
        total_operands: 22
        length: 51
        estimated_program_length: 118.764
        purity_ratio: 2.329
        vocabulary: 30
        volume: 250.251
        difficulty: 6.368
        level: 0.157
        effort: 1593.706
        time: 88.539
        bugs: 0.045
      loc:
        sloc: 11
        ploc: 10
        lloc: 1
        cloc: 0
        blank: 1
        sloc_average: 11
        ploc_average: 10
        lloc_average: 1
        cloc_average: 0
        blank_average: 1
        sloc_min: 11
        sloc_max: 11
        cloc_min: 0
        cloc_max: 0
        ploc_min: 10
        ploc_max: 10
        lloc_min: 1
        lloc_max: 1
        blank_min: 1
        blank_max: 1
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 72
        average: 72
        min: 72
        max: 72
      mi:
        original: 103.207
        sei: 73.298
        visual_studio: 60.355
      abc:
        assignments: 0
        branches: 4
        conditions: 0
        magnitude: 4
        value: 4
        assignments_average: 0
        branches_average: 4
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 4
        branches_max: 4
        conditions_min: 0
        conditions_max: 0
  - name: test_newtype_fallthrough_generic
    start_line: 74
    end_line: 88
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 12
        total_operators: 70
        unique_operands: 28
        total_operands: 51
        length: 121
        estimated_program_length: 177.625
        purity_ratio: 1.468
        vocabulary: 40
        volume: 643.953
        difficulty: 10.929
        level: 0.092
        effort: 7037.49
        time: 390.972
        bugs: 0.122
      loc:
        sloc: 15
        ploc: 14
        lloc: 5
        cloc: 0
        blank: 1
        sloc_average: 15
        ploc_average: 14
        lloc_average: 5
        cloc_average: 0
        blank_average: 1
        sloc_min: 15
        sloc_max: 15
        cloc_min: 0
        cloc_max: 0
        ploc_min: 14
        ploc_max: 14
        lloc_min: 5
        lloc_max: 5
        blank_min: 1
        blank_max: 1
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 159
        average: 159
        min: 159
        max: 159
      mi:
        original: 93.268
        sei: 58.958
        visual_studio: 54.543
      abc:
        assignments: 0
        branches: 16
        conditions: 0
        magnitude: 16
        value: 16
        assignments_average: 0
        branches_average: 16
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 16
        branches_max: 16
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 6
    value: 1
    average: 1.2
    min: 1
    max: 1
    modified:
      sum: 6
      value: 1
      average: 1.2
      min: 1
      max: 1
  halstead:
    unique_operators: 14
    total_operators: 315
    unique_operands: 47
    total_operands: 225
    length: 540
    estimated_program_length: 314.369
    purity_ratio: 0.582
    vocabulary: 61
    volume: 3202.598
    difficulty: 33.511
    level: 0.03
    effort: 107321.109
    time: 5962.284
    bugs: 0.753
  loc:
    sloc: 88
    ploc: 75
    lloc: 23
    cloc: 1
    blank: 12
    sloc_average: 14.667
    ploc_average: 12.5
    lloc_average: 3.833
    cloc_average: 0.167
    blank_average: 2
    sloc_min: 11
    sloc_max: 88
    cloc_min: 0
    cloc_max: 1
    ploc_min: 10
    ploc_max: 75
    lloc_min: 1
    lloc_max: 23
    blank_min: 1
    blank_max: 12
  nom:
    functions: 5
    closures: 0
    functions_average: 0.833
    closures_average: 0
    total: 5
    average: 0.833
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 708
    average: 118
    min: 44
    max: 159
  mi:
    original: 55.114
    sei: 54.261
    visual_studio: 32.231
  abc:
    assignments: 0
    branches: 54
    conditions: 0
    magnitude: 54
    value: 0
    assignments_average: 0
    branches_average: 9
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 16
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
