snapshots/serde/test_suite/tests/test_roundtrip.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 42
kind: unit
spaces:
  - name: ip_addr_roundtrip
    start_line: 10
    end_line: 23
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 12
        total_operators: 37
        unique_operands: 22
        total_operands: 26
        length: 63
        estimated_program_length: 141.127
        purity_ratio: 2.24
        vocabulary: 34
        volume: 320.51
        difficulty: 7.091
        level: 0.141
        effort: 2272.708
        time: 126.262
        bugs: 0.058
      loc:
        sloc: 14
        ploc: 14
        lloc: 1
        cloc: 0
        blank: 0
        sloc_average: 14
        ploc_average: 14
        lloc_average: 1
        cloc_average: 0
        blank_average: 0
        sloc_min: 14
        sloc_max: 14
        cloc_min: 0
        cloc_max: 0
        ploc_min: 14
        ploc_max: 14
        lloc_min: 1
        lloc_max: 1
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 82
        average: 82
        min: 82
        max: 82
      mi:
        original: 98.014
        sei: 65.805
        visual_studio: 57.318
      abc:
        assignments: 0
        branches: 3
        conditions: 0
        magnitude: 3
        value: 3
        assignments_average: 0
        branches_average: 3
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 3
        branches_max: 3
        conditions_min: 0
        conditions_max: 0
  - name: socket_addr_roundtrip
    start_line: 26
    end_line: 42
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 12
        total_operators: 48
        unique_operands: 25
        total_operands: 36
        length: 84
        estimated_program_length: 159.116
        purity_ratio: 1.894
        vocabulary: 37
        volume: 437.594
        difficulty: 8.64
        level: 0.116
        effort: 3780.813
        time: 210.045
        bugs: 0.081
      loc:
        sloc: 17
        ploc: 17
        lloc: 1
        cloc: 0
        blank: 0
        sloc_average: 17
        ploc_average: 17
        lloc_average: 1
        cloc_average: 0
        blank_average: 0
        sloc_min: 17
        sloc_max: 17
        cloc_min: 0
        cloc_max: 0
        ploc_min: 17
        ploc_max: 17
        lloc_min: 1
        lloc_max: 1
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 106
        average: 106
        min: 106
        max: 106
      mi:
        original: 93.249
        sei: 58.931
        visual_studio: 54.532
      abc:
        assignments: 0
        branches: 3
        conditions: 0
        magnitude: 3
        value: 3
        assignments_average: 0
        branches_average: 3
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 3
        branches_max: 3
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 3
    value: 1
    average: 1.5
    min: 1
    max: 1
    modified:
      sum: 3
      value: 1
      average: 1.5
      min: 1
      max: 1
  halstead:
    unique_operators: 14
    total_operators: 101
    unique_operands: 39
    total_operands: 74
    length: 175
    estimated_program_length: 259.434
    purity_ratio: 1.482
    vocabulary: 53
    volume: 1002.386
    difficulty: 13.282
    level: 0.075
    effort: 13313.743
    time: 739.652
    bugs: 0.187
  loc:
    sloc: 42
    ploc: 38
    lloc: 2
    cloc: 0
    blank: 4
    sloc_average: 14
    ploc_average: 12.667
    lloc_average: 0.667
    cloc_average: 0
    blank_average: 1.333
    sloc_min: 14
    sloc_max: 42
    cloc_min: 0
    cloc_max: 0
    ploc_min: 14
    ploc_max: 38
    lloc_min: 1
    lloc_max: 2
    blank_min: 0
    blank_max: 4
  nom:
    functions: 2
    closures: 0
    functions_average: 0.667
    closures_average: 0
    total: 2
    average: 0.667
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 226
    average: 75.333
    min: 38
    max: 106
  mi:
    original: 73.827
    sei: 31.115
    visual_studio: 43.174
  abc:
    assignments: 0
    branches: 6
    conditions: 0
    magnitude: 6
    value: 0
    assignments_average: 0
    branches_average: 2
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 3
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
