snapshots/serde/test_suite/tests/test_unstable.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 10
kind: unit
spaces: []
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 1
    value: 1
    average: 1
    min: 1
    max: 1
    modified:
      sum: 1
      value: 1
      average: 1
      min: 1
      max: 1
  halstead:
    unique_operators: 7
    total_operators: 12
    unique_operands: 9
    total_operands: 9
    length: 21
    estimated_program_length: 48.181
    purity_ratio: 2.294
    vocabulary: 16
    volume: 84
    difficulty: 3.5
    level: 0.286
    effort: 294
    time: 16.333
    bugs: 0.015
  loc:
    sloc: 10
    ploc: 4
    lloc: 0
    cloc: 5
    blank: 1
    sloc_average: 10
    ploc_average: 4
    lloc_average: 0
    cloc_average: 5
    blank_average: 1
    sloc_min: 10
    sloc_max: 10
    cloc_min: 5
    cloc_max: 5
    ploc_min: 4
    ploc_max: 4
    lloc_min: 0
    lloc_max: 0
    blank_min: 1
    blank_max: 1
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 32
    average: 32
    min: 32
    max: 32
  mi:
    original: 110.428
    sei: 33.757
    visual_studio: 64.578
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
